Fixing overlapping for requests

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -42,7 +42,7 @@ a:hover {
 
 .table th,
 .table td {
-  padding: 12px 15px;
+  padding: 12px;
 }
 
 .table tbody tr {
